--- a/alu.qsf
+++ b/alu.qsf
@@ -39,7 +39,7 @@
 
 set_global_assignment -name FAMILY "Cyclone IV E"
 set_global_assignment -name DEVICE EP4CE115F29C7
-set_global_assignment -name TOP_LEVEL_ENTITY alu
+set_global_assignment -name TOP_LEVEL_ENTITY sra
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 16.0.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "10:40:27  SEPTEMBER 11, 2021"
 set_global_assignment -name LAST_QUARTUS_VERSION 16.0.0
@@ -59,12 +59,19 @@ set_global_assignment -name VERILOG_FILE fa.v
 set_global_assignment -name VERILOG_FILE rca_16.v
 set_global_assignment -name VERILOG_FILE csa_32.v
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH alu_tb -section_id eda_simulation
-set_global_assignment -name EDA_TEST_BENCH_NAME alu_tb -section_id eda_simulation
-set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id alu_tb
-set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME alu_tb -section_id alu_tb
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH sra_tb -section_id eda_simulation
+set_global_assignment -name VERILOG_FILE and_32.v
+set_global_assignment -name VERILOG_FILE and_tb.v
+set_global_assignment -name VERILOG_FILE or_32.v
+set_global_assignment -name VERILOG_FILE sll.v
+set_global_assignment -name VERILOG_FILE sll_tb.v
+set_global_assignment -name VERILOG_FILE sra.v
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name EDA_TEST_BENCH_FILE alu_tb.v -section_id alu_tb
+set_global_assignment -name VERILOG_FILE sra_tb.v
+set_global_assignment -name EDA_TEST_BENCH_NAME sra_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id sra_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME sra_tb -section_id sra_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE sra_tb.v -section_id sra_tb
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
